tests/error/equalsInteger-wrong-1st-argument-unit.uplc
(program 1.0.0[[(builtin equalsInteger)(con unit ())](con integer 10)])